# CplusplusCMakeTemplate

./: .clang-tidy  .gitignore  CMakeLists.txt  clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  main.cpp  version.h.in
